--- a/inde.html
+++ b/inde.html
@@ -87,7 +87,7 @@
   <script>
     // Redirect after animation ends (2.5 seconds)
     setTimeout(() => {
-      window.location.href = "https://mweb-co.github.io/Email/indexx.html";
+      window.location.href = "https://mweb-co.github.io/Email/";
     }, 2500); // 2.5 seconds for the animation to complete
   </script>
 </body>
